# modular-symbols

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  out  out2
analysis/: .gitignore  process_split.sage  split_new.csv  timing.ipynb
cpp/: .gitignore  CMakeLists.txt  boundary_map.cpp  boundary_map.h  cache_decorator.h  debug_print.h  debug_temp.cpp  debug_temp.h  debug_timer.h  debug_utils.cpp  debug_utils.h  flint_wrappers.cpp  flint_wrappers.h  fmpz_mat_helpers.cpp  fmpz_mat_helpers.h  heilbronn.cpp  heilbronn.h  linalg.cpp  linalg.h  main.cpp  manin_basis.cpp  manin_basis.h  manin_element.cpp  manin_element.h  manin_symbol.cpp  manin_symbol.h  matrix_poly.cpp  matrix_poly.h  modular_symbol.cpp  modular_symbol.h  newform_subspaces.cpp  newform_subspaces.h  newspace.cpp  newspace.h  subspace.cpp  subspace.h  subspace_basis.cpp  subspace_basis.h  utils.h
sage/: modular-symbols.sage
src/cpp/: .gitignore  CMakeLists.txt  build.sh  cache_decorator.h  manin_symbol.cpp  manin_symbol.h
src/sage/: modular-symbols.sage
test/: CMakeLists.txt  boundary_map_test.cpp  manin_basis_test.cpp  manin_symbol_test.cpp  newform_subspace_test.cpp  newspace_test.cpp  perft.py
